--- a/TgBotC++.vcxproj
+++ b/TgBotC++.vcxproj
@@ -146,12 +146,14 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="InfoOut.cpp" />
     <ClCompile Include="TgBotC++.cpp" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="InfoOut.h" />
     <ClInclude Include="README.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
