--- a/TgBotC++.vcxproj
+++ b/TgBotC++.vcxproj
@@ -147,6 +147,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="InfoOut.cpp" />
+    <ClCompile Include="MyFuncBot.cpp" />
     <ClCompile Include="TgBotC++.cpp" />
   </ItemGroup>
   <ItemGroup>
@@ -154,7 +155,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="InfoOut.h" />
-    <ClInclude Include="README.h" />
+    <ClInclude Include="MyFuncBot.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
