--- a/TgBotC++.vcxproj.filters
+++ b/TgBotC++.vcxproj.filters
@@ -24,6 +24,9 @@
     <ClCompile Include="MyFuncBot.cpp">
       <Filter>Исходные файлы</Filter>
     </ClCompile>
+    <ClCompile Include="ParseJson.cpp">
+      <Filter>Исходные файлы</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
@@ -33,6 +36,9 @@
       <Filter>Файлы заголовков</Filter>
     </ClInclude>
     <ClInclude Include="MyFuncBot.h">
+      <Filter>Файлы заголовков</Filter>
+    </ClInclude>
+    <ClInclude Include="ParseJson.h">
       <Filter>Файлы заголовков</Filter>
     </ClInclude>
   </ItemGroup>
